Fix spacing

--- a/static/blog.css
+++ b/static/blog.css
@@ -1,4 +1,4 @@
-div#content {
+div#main {
   max-width: 40em;
   margin-left: auto;
   margin-right: auto;
